syntax = "proto3";

option java_package = "ru.practicum.analyzer.grpc";
option java_outer_classname = "RecommendationsProto";

import "google/protobuf/timestamp.proto";

message UserPredictionsRequestProto {
  int64 user_id = 1;
  int64 max_results = 2;
}

message SimilarEventsRequestProto {
  int64 event_id = 1;
  int64 user_id = 2;
  int64 max_results = 3;
}

message InteractionsCountRequestProto {
  repeated int64 event_ids = 1;
}

message RecommendedEventProto {
  int64 event_id = 1;
  double score = 2;
}

service RecommendationsController {
  rpc GetRecommendationsForUser(UserPredictionsRequestProto) returns (stream RecommendedEventProto);
  rpc GetSimilarEvents(SimilarEventsRequestProto) returns (stream RecommendedEventProto);
  rpc GetInteractionsCount(InteractionsCountRequestProto) returns (stream RecommendedEventProto);
}
